# website

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: deploy-website.yml
.github/workflows/: deploy-website.yml
docs/: about.md  index.md  showcase.md
docs/assets/others/: llmads.mov
docs/css/: custom.css  showcase.css
docs/posts/: running-inspiration.md
docs/showcase/: gravity-wave-detection.md  llmads.md  mm-generator.md  tracking-optima.md
docs/templates/: post.html  showcase.html
search/: search_index.json
